<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/yellow_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/green_darker">

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/category" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_back_excuses"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/yellow_light"
            android:textAllCaps="false"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_lighter"
        android:scrollbars="vertical"
        android:layout_weight = "1"
        android:orientation="horizontal" >

        <Space
            android:layout_width="90dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/edit_excuse_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="60dp"
            android:minHeight="300dp"
            android:padding="15dp"
            android:elevation="3dp"
            android:background="@color/white"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:gravity="start|top"
            android:inputType="textMultiLine"/>

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green_lighter">

        <Button
            android:id="@+id/button_save_excuse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_save_excuses"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/yellow_light"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/button_mod_excuse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_mod_excuses"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/green_dark"
            />

        <Button
            android:id="@+id/button_ban_excuse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_ban_excuses"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/green_darker"
            />
    </LinearLayout>

</LinearLayout>