<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/yellow_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/green_darker">

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/category" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_lighter"
        android:scrollbars="vertical"
        android:layout_weight = "1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/yellow_light">

        <Button
            android:id="@+id/new_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_new_excuses"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_add_excuses"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/green_darker"
            android:textAllCaps="false"
            />
    </LinearLayout>

</LinearLayout>